ingress-fix/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.192.168.1.38.nip.io
    http:
      paths:
      - backend:
          service:
            name: alertmanager-main
            port:
              name: web
        path: /
  tls:
  - hosts:
    - alertmanager.192.168.1.38.nip.io
