ingress-fix/ingress-grafana.yaml
  
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.192.168.1.38.nip.io
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              name: http
        path: /
  tls:
  - hosts:
    - grafana.192.168.1.38.nip.io
