ingress-fix/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-k8s
  namespace: monitoring
spec:
  rules:
  - host: prometheus.192.168.1.38.nip.io
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              name: web
        path: /
  tls:
  - hosts:
    - prometheus.192.168.1.38.nip.io
